paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_1/sample_001/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_1/sample_001/target.rs:36:14
   |
36 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_1/sample_001/target.rs:37:9
   |
37 |     let mut distance: Miles = 40;
   |         ----^^^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_1/sample_001/target.rs:53:9
   |
53 |     let mut metricp: Klicksp = f_plain;
   |         ----^^^^^^^
   |         |
   |         help: remove this `mut`

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_1/sample_001/target.rs:63:9
   |
63 |     let mut x = Range { hi: 1.5, lo: -1.5 };
   |         ----^
   |         |
   |         help: remove this `mut`

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_1/sample_001/target.rs:72:9
   |
72 |     let mut z = Range { hi: 10.0, lo: -9.0 };
   |         ----^
   |         |
   |         help: remove this `mut`

error: aborting due to 1 previous error; 4 warnings emitted

For more information about this error, try `rustc --explain E0277`.